--- a/priv/www/js/tmpl/limits.ejs
+++ b/priv/www/js/tmpl/limits.ejs
@@ -50,7 +50,7 @@
 </div>
 
 <div class="section administrator-only">
-    <h2>Set / update a limit</h2>
+    <h2>Set / update a virtual host limit</h2>
     <div class="hider">
         <form action="#/limits" method="put">
             <table class="form">
@@ -88,3 +88,90 @@
     </div>
 </div>
 
+<div class="section">
+  <h2>User Limits</h2>
+  <div class="hider">
+      <div class="updatable">
+
+          <% if (user_limits.length > 0) { %>
+          <table class="list">
+            <thead>
+              <tr>
+                <th>User</th>
+                <th>Limit</th>
+                <th>Value</th>
+                <th class="administrator-only"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <% for (var i = 0; i < user_limits.length; i++) {
+                var user_limit = user_limits[i];
+                var user_limit_values = Object.keys(user_limit.value).sort().map(
+                  function(k) { return {name: k, value: user_limit.value[k]};});
+              %>
+
+              <% for (var j = 0; j < user_limit_values.length; j++) {
+                var user_limit_value = user_limit_values[j];
+              %>
+
+              <tr<%= alt_rows(j+1)%>>
+                  <% if(j == 0) { %>
+                  <td rowspan="<%= user_limit_values.length %>"> <%= fmt_string(user_limit.user) %> </td>
+                  <% } %>
+                  <td><%= user_limit_value.name %></td>
+                  <td><%= user_limit_value.value %></td>
+                  <td class="administrator-only">
+                      <form action="#/user-limits" method="delete" class="confirm">
+                          <input type="hidden" name="name" value="<%= fmt_string(user_limit_value.name) %>"/>
+                          <input type="hidden" name="user" value="<%= fmt_string(user_limit.user) %>"/>
+                          <input type="submit" value="Clear"/>
+                      </form>
+                  </td>
+              </tr>
+              <% } %>
+              <% } %>
+            </tbody>
+          </table>
+          <% } %>
+      </div>
+  </div>
+</div>
+
+<div class="section administrator-only">
+  <h2>Set / update a user limit</h2>
+  <div class="hider">
+      <form action="#/user-limits" method="put">
+          <table class="form">
+              <tr>
+                <th><label>User:</label></th>
+                <td>
+                  <select name="user">
+                      <% for (var i = 0; i < user_limits.length; i++) { %>
+                      <option value="<%= fmt_string(user_limits[i].user) %>">
+                          <%= fmt_string(user_limits[i].user) %>
+                      </option>
+                      <% } %>
+                  </select>
+                </td>
+              </tr>
+              <tr>
+                  <th><label>Limit:</label></th>
+                  <td>
+                      <select name="name">
+                          <option value="max-connections">max-connections</option>
+                          <option value="max-channels">max-channels</option>
+                      </select>
+                  </td>
+              </tr>
+              <tr>
+                  <th><label>Value:</label></th>
+                  <td>
+                      <input type="text" name="value"/>
+                      <span class="mand">*</span>
+                  </td>
+              </tr>
+          </table>
+          <input type="submit" value="Set / update limit"/>
+      </form>
+  </div>
+</div>
