Add stream policies

--- a/priv/www/js/tmpl/policies.ejs
+++ b/priv/www/js/tmpl/policies.ejs
@@ -132,6 +132,15 @@
                 </td>
               </tr>
               <tr>
+                <td>Queues [Stream]</td>
+                <td>
+                  <span class="argument-link" field="definition" key="max-age" type="string">Max age</span>
+                  <span class="help" id="queue-max-age"></span> |
+                  <span class="argument-link" field="definition" key="max-segment-size" type="number">Max segment size</span>
+                  <span class="help" id="queue-max-segment-size"></span>
+                </td>
+              </tr>
+              <tr>
                 <td>Exchanges</td>
                 <td>
                   <span class="argument-link" field="definition" key="alternate-exchange" type="string">Alternate exchange</span>
